<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnConstraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#CD5C5C"
        android:onClick="onConstraintClick"
        android:text="@string/constraint"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:backgroundTint="#6495ED"
        android:onClick="onLinearClick"
        android:text="@string/linear"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/btnConstraint"
        app:layout_constraintRight_toRightOf="@+id/btnConstraint"
        app:layout_constraintTop_toBottomOf="@+id/btnConstraint" />

    <Button
        android:id="@+id/btnRelative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#800080"
        android:onClick="onRelativeClick"
        android:text="@string/relative"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/btnLinear"
        app:layout_constraintRight_toRightOf="@+id/btnLinear"
        app:layout_constraintTop_toBottomOf="@+id/btnLinear" />

    <Button
        android:id="@+id/btnGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#21610B"
        android:onClick="onGridClick"
        android:text="@string/grid"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/btnRelative"
        app:layout_constraintRight_toRightOf="@+id/btnRelative"
        app:layout_constraintTop_toBottomOf="@+id/btnRelative" />

    <Button
        android:id="@+id/btnTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#DF01A5"
        android:onClick="onTableClick"
        android:text="@string/table"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/btnGrid"
        app:layout_constraintRight_toRightOf="@+id/btnGrid"
        app:layout_constraintTop_toBottomOf="@+id/btnGrid" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:text="@string/name_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/title_font_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>